<resources>
    <string name="app_name">新闻App</string>
    <string name="username">请输入用户名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="password">输入密码,仅为数字</string>
    <string name="birthday">请输入出生年月</string>
    <string name="getdate">获取日期</string>
    <string name="school">输入学校</string>
    <string name="city">选择所在城市</string>
    <string name="btnregister">注册</string>
    <string name="btnclear">清除</string>
    <string name="cbremember">同意该协议</string>
</resources>
