<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_xinxi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:orientation="vertical"
    tools:context="com.example.app.ChangeXinxiActivity">

    <TextView
        android:text="修改个人信息"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28sp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/my"
            android:layout_marginStart="10dp"

            />
        <TextView
            android:text="用户名"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp" />
        <TextView
            android:text="aaaaa"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_xinxiname"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >
        <TextView
            android:text="性别"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_marginStart="40dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_xinxisex"
            android:textSize="18sp"
            android:paddingEnd="25dp">
            <RadioButton
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_xinximale"
                android:layout_weight="1"
                />
            <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_xinxifemale"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >
        <TextView
            android:text="出生年月"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_marginStart="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:paddingStart="10dp"
            android:enabled="false"
            android:ems="8"
            android:layout_marginTop="5dp"
            android:id="@+id/et_xinxibirthday"
            />

        <Button
            android:text="@string/getdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_xinxidate"
            android:onClick="xinxidateOnClick"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >
        <TextView
            android:text="城市名"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_marginStart="40dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cityArray"
            android:id="@+id/sp_xinxicity"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >
        <Button
            android:text="修改"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_marginStart="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:onClick="changexinxiClick"
            />

        <Button
            android:text="清除"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:layout_marginStart="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:onClick="clearxinxiClick"
            />
    </LinearLayout>


</LinearLayout>
